[package]
name = "glassbench"
version = "0.2.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/glassbench"
description = "rust benchmark with memory"
edition = "2018"
keywords = ["benchmark"]
license = "MIT"
categories = ["development-tools", "development-tools::profiling"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.19.0"
csv2svg = "0.1"
git2 = { version="0.13", default-features=false }
lazy_static = "1.4"
minimad = "0.7.0"
open = "1.1"
rusqlite = { version = "0.24.2", features = ["bundled"] }
svg = "0.8"
tempfile = "3.1"
termimad = { version = "0.10.0", default-features = false, features = ["special-renders"] }
thiserror = "1.0"
